support multi module - image_url